feat: Add CI/CD workflows for Marketplace Messaging Service, Web Service, and Web UI Client
- Implemented CI/CD pipeline for Marketplace Messaging Service with stages for linting, building, testing, Docker image creation, security scanning, and summary reporting.
- Created CI/CD workflow for Web Service including code quality checks, unit and integration testing, Docker image building, and security scanning.
- Established CI/CD pipeline for Web UI Client featuring linting, building, unit and integration testing, Docker image creation, Lighthouse performance testing, and summary reporting.

--- a/.github/workflows/admin-dashboard-ci-cd.yml
+++ b/.github/workflows/admin-dashboard-ci-cd.yml
@@ -1,16 +1,16 @@
-name: Marketplace Admin Dashboard
+name: Admin Dashboard CI/CD Pipeline
 
 on:
   push:
     branches: [main, develop, phase2CICDUpdates]
     paths:
       - 'frontend/admin-dashboard/**'
-      - '.github/workflows/marketplace-admin-dashboard-ci-cd.yml'
+      - '.github/workflows/admin-dashboard-ci-cd.yml'
   pull_request:
     branches: [main, develop]
     paths:
       - 'frontend/admin-dashboard/**'
-      - '.github/workflows/marketplace-admin-dashboard-ci-cd.yml'
+      - '.github/workflows/admin-dashboard-ci-cd.yml'
 
 env:
   NODE_VERSION: '20'
