fix: Add missing newline at end of test-file.md (#25)
* fix: Add missing newline at end of test-file.md

* fix: Update CI/CD summary and roadmap references for consistency

* fix: Update CI/CD section title for clarity in Phase 5 Roadmap

* feat: Add CI/CD workflows for Marketplace Messaging Service, Web Service, and Web UI Client

- Implemented CI/CD pipeline for Marketplace Messaging Service with stages for linting, building, testing, Docker image creation, security scanning, and summary reporting.
- Created CI/CD workflow for Web Service including code quality checks, unit and integration testing, Docker image building, and security scanning.
- Established CI/CD pipeline for Web UI Client featuring linting, building, unit and integration testing, Docker image creation, Lighthouse performance testing, and summary reporting.

---------

Co-authored-by: Shahid Hussain <shahid.hussain@seb.se>

--- a/.github/workflows/web-ui-client-ci-cd.yml
+++ b/.github/workflows/web-ui-client-ci-cd.yml
@@ -1,16 +1,16 @@
-name: Marketplace Web CI/CD
+name: Web UI ClientCI/CD Pipeline
 
 on:
   push:
     branches: [main, develop, phase2CICDUpdates]
     paths:
       - 'frontend/marketplace-web/**'
-      - '.github/workflows/marketplace-web.yml'
+      - '.github/workflows/web-ui-client-ci-cd.yml'
   pull_request:
     branches: [main, develop]
     paths:
       - 'frontend/marketplace-web/**'
-      - '.github/workflows/marketplace-web.yml'
+      - '.github/workflows/web-ui-client-ci-cd.yml'
 
 env:
   NODE_VERSION: '20'
@@ -336,7 +336,7 @@ jobs:
     steps:
       - name: Display summary
         run: |
-          echo "## 🎉 Marketplace Web CI/CD Summary" >> $GITHUB_STEP_SUMMARY
+          echo "## 🎉 Marketplace Web Summary" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
           echo "| Stage | Status |" >> $GITHUB_STEP_SUMMARY
           echo "|-------|--------|" >> $GITHUB_STEP_SUMMARY
