feat: Upgrade Go version to 1.24 and update related configurations across services

--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -39,21 +39,21 @@ http {
                application/json application/javascript;
 
     # ============================================================================
-    # UPSTREAM SERVICES (to be added as services come online)
+    # UPSTREAM SERVICES (Docker container names)
     # ============================================================================
 
     upstream java_backend {
-        server localhost:8080;
+        server marketplace-service:8080;
         keepalive 32;
     }
 
     upstream go_backend {
-        server localhost:8081;
+        server messaging-service:8081;
         keepalive 32;
     }
 
     upstream dotnet_backend {
-        server localhost:8082;
+        server lms-service:8082;
         keepalive 32;
     }
 
@@ -284,10 +284,10 @@ http {
     }
 
     # ============================================================================
-    # MONITORING ENDPOINTS
+    # MONITORING ENDPOINTS (Port 8088 to avoid conflict with Prometheus on 9090)
     # ============================================================================
     server {
-        listen 9090;
+        listen 8088;
         server_name _;
 
         location /metrics {
