--- a/config/docker-compose.yml
+++ b/config/docker-compose.yml
@@ -145,12 +145,21 @@ services:
     ports:
       - "80:80"
       - "443:443"
+      - "8088:8088"
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf:ro
       - ./ssl:/etc/nginx/ssl:ro
     depends_on:
-      - postgres
-      - redis
+      postgres:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
+      marketplace-service:
+        condition: service_healthy
+      messaging-service:
+        condition: service_healthy
+      lms-service:
+        condition: service_healthy
     networks:
       - marketplace-network
     healthcheck:
