feat: Implement three-tier port strategy for frontend applications
- Added PORT_RESOLUTION_SUMMARY.md to document port allocation strategy and configuration changes.
- Updated Marketplace Web to use port 3002 in package.json.
- Verified and confirmed Admin Dashboard remains on port 3001.
- Enhanced Docker and backend configurations to support new port assignments.
- Created scripts for fixing frontend port configurations, starting all services, and verifying port setups.
- Updated testing guide and marketplace design documentation to reflect new database credentials.
- Added scripts to start and stop all services, ensuring smooth local development experience.

--- a/.github/workflows/web-service-ci-cd.yml
+++ b/.github/workflows/web-service-ci-cd.yml
@@ -89,7 +89,7 @@ jobs:
         image: postgres:15
         env:
           POSTGRES_USER: marketplace_user
-          POSTGRES_PASSWORD: marketplace_password
+          POSTGRES_PASSWORD: marketplace_pass_dev
           POSTGRES_DB: marketplace_db
         options: >-
           --health-cmd pg_isready
