--- a/.github/workflows/messaging-service-ci-cd.yml
+++ b/.github/workflows/messaging-service-ci-cd.yml
@@ -37,7 +37,7 @@ jobs:
 
       - name: Install golangci-lint
         run: |
-          curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v1.55.2
+          curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin latest
 
       - name: Run golangci-lint
         working-directory: ./services/messaging-service
