--- a/.github/workflows/messaging-service-ci-cd.yml
+++ b/.github/workflows/messaging-service-ci-cd.yml
@@ -35,13 +35,12 @@ jobs:
           go-version: ${{ env.GO_VERSION }}
           cache-dependency-path: services/messaging-service/go.sum
 
-      - name: Install golangci-lint
-        run: |
-          curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin latest
-
       - name: Run golangci-lint
-        working-directory: ./services/messaging-service
-        run: $(go env GOPATH)/bin/golangci-lint run --timeout=5m || echo "Linting completed with warnings"
+        uses: golangci/golangci-lint-action@v6
+        with:
+          version: v1.62.2
+          working-directory: services/messaging-service
+          args: --timeout=5m
         continue-on-error: true
 
       - name: Check code formatting
