fix: Correct formatting in test-file.md (#34)
* fix: Correct formatting in test-file.md

* feat: Upgrade Go version to 1.24 and update related configurations across services

* feat: Implement three-tier port strategy for frontend applications

- Added PORT_RESOLUTION_SUMMARY.md to document port allocation strategy and configuration changes.
- Updated Marketplace Web to use port 3002 in package.json.
- Verified and confirmed Admin Dashboard remains on port 3001.
- Enhanced Docker and backend configurations to support new port assignments.
- Created scripts for fixing frontend port configurations, starting all services, and verifying port setups.
- Updated testing guide and marketplace design documentation to reflect new database credentials.
- Added scripts to start and stop all services, ensuring smooth local development experience.

* fix: Update golangci-lint installation script to use the latest version

* refactor: Remove Maven Checkstyle step from CI/CD pipeline

* fix: Use golangci-lint-action v6 to fix linter installation

---------

Co-authored-by: Shahid Hussain <shahid.hussain@seb.se>

--- a/.github/workflows/web-service-ci-cd.yml
+++ b/.github/workflows/web-service-ci-cd.yml
@@ -35,11 +35,6 @@ jobs:
           java-version: '21'
           cache: maven
 
-      - name: Check code formatting (Maven Checkstyle)
-        working-directory: ./services/marketplace-service
-        run: mvn -B checkstyle:check || echo "Checkstyle not configured, skipping"
-        continue-on-error: true
-
       - name: Compile code
         working-directory: ./services/marketplace-service
         run: mvn -B clean compile -DskipTests
@@ -89,7 +84,7 @@ jobs:
         image: postgres:15
         env:
           POSTGRES_USER: marketplace_user
-          POSTGRES_PASSWORD: marketplace_password
+          POSTGRES_PASSWORD: marketplace_pass_dev
           POSTGRES_DB: marketplace_db
         options: >-
           --health-cmd pg_isready
