--- a/.github/workflows/web-ui-client-ci-cd.yml
+++ b/.github/workflows/web-ui-client-ci-cd.yml
@@ -317,11 +317,25 @@ jobs:
           npm start &
           sleep 10
 
+      - name: Wait for server to be ready
+        run: |
+          echo "Waiting for server to be ready on port 3002..."
+          for i in {1..30}; do
+            if curl -s http://localhost:3002 > /dev/null; then
+              echo "Server is ready!"
+              exit 0
+            fi
+            echo "Waiting... ($i/30)"
+            sleep 2
+          done
+          echo "Server failed to start"
+          exit 1
+
       - name: Run Lighthouse CI
         uses: treosh/lighthouse-ci-action@v10
         with:
           urls: |
-            http://localhost:3001
+            http://localhost:3002
           temporaryPublicStorage: true
 
   # ============================================
