fix: Upgrade golangci-lint to latest for Go 1.24 support and fix all React/Next.js ESLint warnings

--- a/.github/workflows/messaging-service-ci-cd.yml
+++ b/.github/workflows/messaging-service-ci-cd.yml
@@ -38,7 +38,7 @@ jobs:
       - name: Run golangci-lint
         uses: golangci/golangci-lint-action@v6
         with:
-          version: v1.62.2
+          version: latest
           working-directory: services/messaging-service
           args: --timeout=5m
         continue-on-error: true
