--- a/frontend/marketplace-web/package.json
+++ b/frontend/marketplace-web/package.json
@@ -16,32 +16,34 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.3",
+    "@tanstack/react-query": "^5.14.2",
+    "axios": "^1.6.2",
+    "clsx": "^2.1.1",
+    "jwt-decode": "^4.0.0",
     "next": "^15.1.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "axios": "^1.6.2",
-    "@tanstack/react-query": "^5.14.2",
-    "zustand": "^4.4.7",
-    "jwt-decode": "^4.0.0",
     "react-hook-form": "^7.49.2",
+    "tailwind-merge": "^3.4.0",
     "zod": "^3.22.4",
-    "@hookform/resolvers": "^3.3.3"
+    "zustand": "^4.4.7"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.1.5",
+    "@testing-library/react": "^16.0.1",
+    "@types/jest": "^29.5.11",
     "@types/node": "^20.10.6",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
-    "typescript": "^5.3.3",
-    "tailwindcss": "^3.4.0",
-    "postcss": "^8.4.32",
     "autoprefixer": "^10.4.16",
     "eslint": "^8.56.0",
     "eslint-config-next": "^15.1.3",
-    "@testing-library/react": "^16.0.1",
-    "@testing-library/jest-dom": "^6.1.5",
-    "@types/jest": "^29.5.11",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "ts-jest": "^29.1.1"
+    "postcss": "^8.4.32",
+    "tailwindcss": "^3.4.0",
+    "ts-jest": "^29.1.1",
+    "typescript": "^5.3.3"
   }
 }
