feat: Add SEB Green core project directory to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -272,3 +272,8 @@ postman/*.environment.json
 secrets/
 private/
 .git-credentials
+
+# ============================================================================
+# SEB GREEN CORE PROJECT
+# ============================================================================
+sebgreen/
