--- a/frontend/admin-dashboard/package.json
+++ b/frontend/admin-dashboard/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@headlessui/react": "^2.0.0",
     "@heroicons/react": "^2.1.1",
+    "@sebgroup/fonts": "^3.0.1",
+    "@sebgroup/green-core": "^2.12.0",
     "@tanstack/react-query": "^5.17.0",
     "axios": "^1.6.5",
     "chart.js": "^4.4.1",
