feat(scripts): add PowerShell scripts for service management and testing
- Created `open-frontend-tests.ps1` to open frontend in browser for manual testing with checklist.
- Added `start-all-services-separate.ps1` to start LMS, Marketplace, and Frontend services in separate PowerShell windows.
- Introduced `test-all-endpoints.ps1` for comprehensive endpoint testing of LMS and Marketplace services.
- Implemented `verify-frontend-rendering.ps1` to verify data rendering on frontend pages.

fix(lms-service): update configuration settings and improve error handling

- Updated MongoDB, AWS, JWT, Kafka, Redis, and Certificate settings in `ServiceCollectionExtensions.cs`.
- Enhanced CORS configuration in `Program.cs` to allow frontend access.
- Improved index creation in `CourseRepository.cs` with error handling for existing indexes.
- Refined course search logic in `CourseService.cs` to handle parsing errors gracefully.
- Updated MongoDB connection strings in `appsettings.Development.json` and `appsettings.json`.

feat(marketplace-service): enhance security and error handling

- Added global exception handling in `GlobalExceptionHandler.java` for better error responses.
- Introduced `UnauthorizedException.java` for custom authorization failures.
- Improved dashboard access control in `DashboardController.java` with role checks.
- Updated job filtering logic in `JobController.java` to include search functionality.
- Enhanced job service to normalize category tokens in `JobService.java`.

test(marketplace-service): add unit tests for job service

- Created `JobServiceTest.java` to validate job retrieval and category normalization logic.

--- a/services/lms-service/appsettings.json
+++ b/services/lms-service/appsettings.json
@@ -25,7 +25,7 @@
   "AllowedHosts": "*",
   "Port": 8082,
   "MongoDbSettings": {
-    "ConnectionString": "mongodb://localhost:27017",
+    "ConnectionString": "mongodb://mongo_user:mongo_pass_dev@localhost:27017/?authSource=admin",
     "DatabaseName": "lms_db"
   },
   "AwsSettings": {
