--- a/frontend/marketplace-web/package.json
+++ b/frontend/marketplace-web/package.json
@@ -34,6 +34,7 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^6.1.5",
     "@testing-library/react": "^16.0.1",
+    "@testing-library/dom": "^9.0.0",
     "@types/jest": "^29.5.11",
     "@types/node": "^20.10.6",
     "@types/react": "^19.0.0",
