--- a/services/lms-service/appsettings.Development.json
+++ b/services/lms-service/appsettings.Development.json
@@ -15,7 +15,7 @@
     }
   },
   "MongoDbSettings": {
-    "ConnectionString": "mongodb://localhost:27017",
+    "ConnectionString": "mongodb://mongo_user:mongo_pass_dev@localhost:27017/?authSource=admin",
     "DatabaseName": "lms_db_dev"
   },
   "AwsSettings": {
