fix: restore robust branch extraction in Jira workflow and fix Alpine apk in messaging Dockerfile
- Restore environment-variable-based branch extraction to avoid expression evaluation issues
- Use GITHUB_HEAD_REF for PRs, strip refs/heads/ from GITHUB_REF for pushes
- Add defensive commit message handling with fallback to empty string
- Add fallback from gh CLI to REST API for PR branch lookups
- Update messaging-service Dockerfile to run apk update before package install
- Fixes workflow failures when extracting KAN-* tickets from branch names

--- a/services/messaging-service/Dockerfile
+++ b/services/messaging-service/Dockerfile
@@ -27,8 +27,8 @@ RUN CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build \
 # Runtime stage
 FROM alpine:latest
 
-# Install runtime dependencies
-RUN apk add --no-cache ca-certificates tzdata
+# Update package index and install runtime dependencies
+RUN apk update && apk add --no-cache ca-certificates tzdata
 
 # Create non-root user
 RUN addgroup -g 1000 appgroup && \
