feat: add Cookies Consent component to marketplace web app
- Implemented CookiesConsent component for managing user cookie preferences.
- Integrated CookiesConsent into the RootLayout of the marketplace web app.
- Updated ui index to export CookiesConsent.
- Added cookie consent logic to handle user preferences and local storage.

chore: update Dockerfiles for lms-service and marketplace-service

- Enhanced Dockerfiles to install SEB Root Certificates and configure NuGet for SEB Artifactory.
- Updated lms-service Dockerfile to ensure correct entry point and install necessary fonts.
- Modified marketplace-service Dockerfile to use SEB Artifactory for dependencies and added health check.

chore: refactor messaging-service Dockerfile

- Changed base image to use SEB Artifactory for Go and Debian.
- Improved build process with cache mounts for faster rebuilds.
- Added health check and switched to non-root user for better security.

--- a/config/docker-compose.yml
+++ b/config/docker-compose.yml
@@ -176,13 +176,19 @@ services:
     ports:
       - "8080:8080"
     environment:
-      SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/marketplace_db
-      SPRING_DATASOURCE_USERNAME: marketplace_user
-      SPRING_DATASOURCE_PASSWORD: marketplace_pass_dev
-      SPRING_REDIS_HOST: redis
-      SPRING_REDIS_PORT: 6379
-      SPRING_KAFKA_BOOTSTRAP_SERVERS: kafka:29092
-      SPRING_DATA_MONGODB_URI: mongodb://mongo_user:mongo_pass_dev@mongodb:27017/lms_db?authSource=admin
+      DB_HOST: postgres
+      DB_PORT: 5432
+      DB_NAME: marketplace_db
+      DB_USER: marketplace_user
+      DB_PASSWORD: marketplace_pass_dev
+      REDIS_HOST: redis
+      REDIS_PORT: 6379
+      KAFKA_BOOTSTRAP_SERVERS: kafka:29092
+      MONGO_USER: mongo_user
+      MONGO_PASSWORD: mongo_pass_dev
+      MONGO_HOST: mongodb
+      MONGO_PORT: 27017
+      MONGO_DB: lms_db
       JWT_SECRET: your-256-bit-secret-change-this-in-production-please-make-it-secure
     depends_on:
       postgres:
